openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pipeline-tracker
  namespace: mfec-pipeline-tools
  labels:
    app: pipeline-tracker
spec:
  to:
    kind: Service
    name: pipeline-tracker
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
